[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hopmark"
version = "0.1.0"
description = "CircuitPython Web Workflow helper"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.3",
]

[project.scripts]
hop = "skills.hopmark.hopmark:main"
